Change Game name

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Memory Card Game</h1>
+    <h1>Empower your brain</h1>
     <p>Moves: <span id="moves">0</span></p>
     <div class="game-container" id="gameBoard"></div>
 
